Updated HTTP Endpoints to allow front end to use simple CRUD operations.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Dido Console</title>
+        <title>Lane Drawing Application</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -61,47 +61,23 @@
         <!-- Scripts -->
         <script src="scripts/app/app.js"></script>
         <script src="scripts/app/app.constants.js"></script>
-        <script src="scripts/components/auth/auth.service.js"></script>
-        <script src="scripts/components/auth/principal.service.js"></script>
-        <script src="scripts/components/auth/services/account.service.js"></script>
-        <script src="scripts/components/auth/services/verify.service.js"></script>
-        <script src="scripts/components/auth/services/password.service.js"></script>
-        <script src="scripts/components/auth/services/register.service.js"></script>
         <script src="scripts/components/form/form.directive.js"></script>
-        <script src="scripts/components/language/language.service.js"></script>
-        <script src="scripts/components/language/language.controller.js"></script>
-        <script src="scripts/components/admin/audits.service.js"></script>
-        <script src="scripts/components/admin/logs.service.js"></script>
-        <script src="scripts/components/admin/configuration.service.js"></script>
-        <script src="scripts/components/admin/monitoring.service.js"></script>
         <script src="scripts/components/navbar/navbar.directive.js"></script>
         <script src="scripts/components/navbar/navbar.controller.js"></script>
 
-        <script src="scripts/components/user/user.service.js"></script>
         <script src="scripts/components/util/truncate.filter.js"></script>
         <script src="scripts/components/util/base64.service.js"></script>
         <script src="scripts/components/util/parse-links.service.js"></script>
 
         <!-- Location Finder -->
-        <script src="scripts/app/admin/admin.js"></script>
-        <script src="scripts/app/admin/audits/audits.js"></script>
-        <script src="scripts/app/admin/audits/audits.controller.js"></script>
-        <script src="scripts/app/admin/configuration/configuration.js"></script>
-        <script src="scripts/app/admin/configuration/configuration.controller.js"></script>
-        <script src="scripts/app/admin/docs/docs.js"></script>
-        <script src="scripts/app/admin/health/health.js"></script>
-        <script src="scripts/app/admin/health/health.controller.js"></script>
-        <script src="scripts/app/admin/logs/logs.js"></script>
-        <script src="scripts/app/admin/logs/logs.controller.js"></script>
-        <script src="scripts/app/admin/metrics/metrics.js"></script>
-        <script src="scripts/app/admin/metrics/metrics.controller.js"></script>
         <script src="scripts/app/error/error.js"></script>
         <script src="scripts/app/main/main.js"></script>
         <script src="scripts/app/main/main.controller.js"></script>
-        <script src="scripts/components/auth/provider/auth.xauth.service.js"></script>
-        <script src="scripts/app/admin/tracker/tracker.js"></script>
-        <script src="scripts/app/admin/tracker/tracker.controller.js"></script>
-        <script src="scripts/components/tracker/tracker.service.js"></script>
+
+        <!-- Mapping a Lane -->
+        <script src="scripts/app/tools/tools.js"></script>
+        <script src="scripts/app/tools/map/newLane.js"></script>
+        <script src="scripts/app/tools/map/newLane.controller.js"></script>
         <!-- endbuild -->
-</body>
+    </body>
 </html>
