--- a/src/main/webapp/scripts/app/error/accessdenied.html
+++ b/src/main/webapp/scripts/app/error/accessdenied.html
@@ -4,9 +4,9 @@
             <span class="logo img-responsive img-rounded"></span>
         </div>
         <div class="col-md-8">
-            <h1 translate="errors.title">Error Page!</h1>
+            <h1>Uh Oh!Error Page</h1>
 
-            <div class="alert alert-danger" translate="errors.403" >
+            <div class="alert alert-danger">
             </div>
         </div>
     </div>
