Updated navbar and removed unneeded spring config files.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,6 +65,15 @@
         <script src="scripts/components/navbar/navbar.directive.js"></script>
         <script src="scripts/components/navbar/navbar.controller.js"></script>
 
+        <!-- List Streets -->
+        <script src="scripts/app/street/street.js"></script>
+        <script src="scripts/app/street/list/listStreets.js"></script>
+        <script src="scripts/app/street/list/listStreets.controller.js"></script>
+
+        <!-- New Street -->
+        <script src="scripts/app/street/new/newStreet.js"></script>
+        <script src="scripts/app/street/new/newStreet.controller.js"></script>
+
         <script src="scripts/components/util/truncate.filter.js"></script>
         <script src="scripts/components/util/base64.service.js"></script>
         <script src="scripts/components/util/parse-links.service.js"></script>
