--- a/src/main/webapp/scripts/app/tools/map/newLane.html
+++ b/src/main/webapp/scripts/app/tools/map/newLane.html
@@ -1,42 +1,38 @@
-    <!-- Form Name -->
-    <legend><a><i class="glyphicon glyphicon-new-window"></i> </a> Map A New Lane</legend>
+<!-- Form Name -->
+<legend><a><i class="glyphicon glyphicon-new-window"></i> </a> Map A New Lane</legend>
 
-    <form class="form-horizontal">
-        <fieldset>
-            <!-- Text input-->
+<form class="form-horizontal">
+    <fieldset>
+        <!-- Button (Double) -->
+        <div class="form-group">
             <div class="row">
-                <div class="form-group">
-                    <label class="col-md-2 control-label" for="textinput">Street Name</label>
-                    <div class="col-md-4">
-                        <input id="textinput" name="textinput" type="text" placeholder="placeholder" class="form-control input-md">
-                    </div>
-                    <label class="col-md-1 control-label" for="selectmultiple">Street Direction</label>
-                    <div class="col-md-4">
-                        <select id="selectmultiple" name="selectmultiple" class="form-control" multiple="multiple">
-                            <option value="1">NORTH</option>
-                            <option value="1">SOUTH</option>
-                            <option value="1">EAST</option>
-                            <option value="1">WEST</option>
-                        </select>
-                    </div>
+                <div class="col-md-6">
+                    <span>  Number of Points: </span> <span class="label label-lg label-danger">{{laneLength}}</span>
                 </div>
+
+                <div class="col-md-4">
+                    <label>Street Name: <b> {{ streetName}} </b></label>
+                    <input type="text" ng-model="streetName"/>
+                    <label>Direction: <b>{{ direction}}</b></label>
+                    <input type="text" ng-model="direction"/>
+                </div>
+
+            </div>
+            <div class="col-md-8">
+                <button ng-click="save()" id="button1id" name="button1id" class="btn btn-lg btn-success">Create Lane</button>
             </div>
 
-            <!-- Button (Double) -->
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="button1id">Double Button</label>
-                <div class="col-md-8">
-                    <button id="button1id" name="button1id" class="btn btn-lg btn-success">Create Lane</button>
-                </div>
-            </div>
-
-        </fieldset>
-    </form>
-
-<ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options"
-                    events="map.events">
-    <ui-gmap-markers models="markers" events="'events'" coords="'coords'" icon="'icon'"
-                     doCluster="false" title="'title'" idKey="'idKey'"
-                     size="'markerSize'" options="'options'">
-    </ui-gmap-markers>
-</ui-gmap-google-map>
+        </div>
+    </fieldset>
+    <div class="row">
+        <div class="col-md-12">
+            <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options"
+                                events="map.events">
+                <ui-gmap-markers models="markers" events="'events'" coords="'coords'" icon="'icon'"
+                                 doCluster="false" title="'title'" idKey="'idKey'"
+                                 size="'markerSize'" options="'options'">
+                </ui-gmap-markers>
+            </ui-gmap-google-map>
+        </div>
+    </div>
+</form>
